--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-fs": "^1.5.1",
     "react-native-keyboard-aware-scroll-view": "^0.1.2",
     "react-native-message-bar": "^1.6.0",
-    "react-native-qrcode": "^0.2.2"
+    "react-native-qrcode": "^0.2.2",
+    "react-native-simple-store": "^1.0.1"
   }
 }
